--- a/Developer/Views/Home/_ShowFlat.cshtml
+++ b/Developer/Views/Home/_ShowFlat.cshtml
@@ -18,7 +18,8 @@
                         @{
                             if (Model.Pictures == null || Model.Pictures.Count == 0)
                             {
-                                <div style="text-align: center">Brak zdjęć</div>
+                                @*<div style="text-align: center">Brak zdjęć</div>*@
+                                <img class="custom-head-photo" src="\Content\Photos\NoImageAvailable.jpg" />
                             }
                             else
                             {
