--- a/Developer/Views/Admin/AdminMenu.cshtml
+++ b/Developer/Views/Admin/AdminMenu.cshtml
@@ -41,10 +41,11 @@
             <small>Oferty</small>
         </a>
     </div>
+
     <div class="col-md-2">
-        <a role="button" class="btn btn-info" style="width: 100%" href="/Admin/Photos">
-                <span class="glyphicon glyphicon-picture"></span>
-                <small>Zdjęcia</small>
+        <a role="button" class="btn btn-info" style="width: 100%" href="/Admin/Statistics">
+            <span class="glyphicon glyphicon-stats"></span>
+                <small>Statystyki</small>
         </a>
     </div>
 </div>
